# stone

./: .dockerignore  .env.example  .gitignore  CHAT_BATCH_PROTOCOL.md  Cargo.toml  DASHBOARD_V2.md  README.md  SECURITY_AUDIT_SNAPSHOT_UPDATER.md  SHARDING.md  bt.txt  build_and_push.sh  build_linux.sh  build_output.txt  index.json  node_config.example.json  node_config.json  nodes.toml  test_auth.py  test_ios_flow.py  test_qr_login.py  update_manifest_v0.2.0.json  update_manifest_v0.4.0.json  update_manifest_v0.4.1.json  update_manifest_v0.9.9.json  update_signing.pub
.github/workflows/: build.yml  release.yml
configs/: stone-node.service
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.tsx  index.css  main.tsx
dashboard/src-tauri/: Cargo.toml  tauri.conf.json
dashboard/src-tauri/capabilities/: default.json
dashboard/src-tauri/src/: extensions.rs  file_upload.rs  gaming_proxy.rs  lib.rs  modules.rs  node_binary_downloader.rs  node_manager.rs
dashboard/src/api/: client.ts  node.ts  stone.ts
dashboard/src/auth/: AuthContext.tsx  LoginView.tsx  bip39.ts
dashboard/src/components/calls/: CallUI.tsx
dashboard/src/components/layout/: NavRail.tsx
dashboard/src/components/plugins/: IframePlugin.tsx  PluginRenderer.tsx
dashboard/src/components/ui/: Avatar.tsx
dashboard/src/hooks/: useModules.ts  useNodeHealth.ts  useSystemStats.ts  useTheme.ts  useWebRTC.ts  useWebSocketEvents.ts
dashboard/src/store/: plugins.ts  session.ts
dashboard/src/types/: api.ts  plugin.ts
dashboard/src/views/announcements/: AnnouncementsView.tsx
dashboard/src/views/chat/: ChatView.tsx  FriendAddOverlay.tsx
dashboard/src/views/explorer/: ExplorerView.tsx
dashboard/src/views/extensions/: DashboardExtView.tsx  ExtensionFrame.tsx  ExtensionsView.tsx  ThemeEditorView.tsx
dashboard/src/views/files/: FileUploadView.tsx
dashboard/src/views/games/: GamesView.tsx
dashboard/src/views/home/: HomeView.tsx
dashboard/src/views/miner/: MinerView.tsx
dashboard/src/views/node/: NodeView.tsx  SystemStatsWidget.tsx
dashboard/src/views/profile/: ProfileEditOverlay.tsx  ProfileView.tsx  SettingsOverlay.tsx
dashboard/src/views/servers/: PluginSettingsView.tsx  ServerView.tsx
dashboard/src/views/wallet/: WalletView.tsx
docker/: Dockerfile  README.md  docker-compose.yml  entrypoint.sh
extensions/: GITHUB_SETUP.md  THEME_EXTENSION_PLAN.md  WASM_EXTENSION_TEMPLATE.md
extensions/dashboard-extension/: ui.html
extensions/themes/cyberpunk/: theme.css
keys/: update_signing.pub
plugins/: pom.xml
plugins/stone-mc-plugin/: README.md  pom.xml
plugins/stone-mc-plugin/src/main/java/net/stonechain/mcplugin/: BlockBreakDropListener.java  ClaimManager.java  ClaimStore.java  ClientViolationDetector.java  EmbeddedNode.java  LightP2pNode.java  MobKillDropListener.java  NodeClient.java  NodeLauncher.java  PersonalVault.java  PersonalVaultStore.java  PlayerWalletStore.java  PopMiner.java  ProofOfClientHash.java  (+14 more)
plugins/stone-mc-plugin/src/main/resources/: config.yml  plugin.yml
scripts/: airdrop.sh  db_check.py  debug_nodes.py  deploy.sh  fix_vps_config.py  publish-update.sh  qr_login_test.py  release.sh  test_shard_distribution.py
scripts/keys/: update_signing.pub
src/: auth.rs  blockchain.rs  chat.rs  chat_policy.rs  consensus.rs  crypto.rs  database.rs  document_pool.rs  game_config.rs  gaming_pool.rs  lib.rs  master_node.rs  merkle_batch.rs  message_pool.rs  network.rs  organization.rs  pop_mining.rs  public_ip_watchdog.rs  push.rs  shard.rs  snapshot.rs  storage.rs  storage_proof.rs  updater.rs  watchdog.rs
src/master/: miner_registry.rs  mining.rs  mod.rs  post_block.rs  trust.rs  types.rs
src/network/: handle.rs  mod.rs  swarm_task.rs
src/network/swarm_task/: commands.rs  events.rs  gossip.rs  maintenance.rs  mod.rs  relay.rs  scoring.rs  sync.rs
src/network_new/: handle.rs  swarm_task.rs
src/token/: address.rs  bridge.rs  game_chain.rs  game_economy.rs  genesis.rs  governance.rs  htlc.rs  ledger.rs  market_sim.rs  mempool.rs  mod.rs  reputation.rs  staking.rs  transaction.rs  wallet.rs
src/token/game_economy/: fork.rs  genres.rs  marketplace.rs  mod.rs  oracle.rs  persistence.rs  rarity_guard.rs  registry.rs  session.rs  wallet.rs
stone_data/: peers.json  shard_holders.json  tunnel.url
stone_data/shards/0b7d3a4fb33a99d82a00fbbfb4d0ea425c723f6b3e24959087bcc1ac8cc21aae/: 0  1  2  3  4  5
stone_data/shards/53e0bd33529ae58fc3b7fbcedf1f53e89f367359a1418227893becbe753cb3c9/: 0  1  2  3  4  5
stone_data/shards/604a11985b2c8dcb0acd5d5224e5418e7c5403febbbd2e746402e428b8ae6cd6/: 0  1  2  3  4  5
stone_data/shards/7cb2bd0ba916422e6a27bcdc06a92c7ca0e29b80c2e89f3322c213a1395daa40/: 0  1  2  3  4  5
stone_data/token_db/: 000054.sst  000065.sst  CURRENT  IDENTITY  LOG  LOG.old.1772235617131673  LOG.old.1772235711554204  LOG.old.1772235749868893  LOG.old.1772237658098897  LOG.old.1772238031781965  LOG.old.1772239081523507  LOG.old.1772239549373841  LOG.old.1772239659141396  LOG.old.1772239812228692  LOG.old.1772242595634425  LOG.old.1772279549751131  LOG.old.1772279808625404  LOG.old.1772291873182090  LOG.old.1772293366624819  LOG.old.1772294153545304  LOG.old.1772294561044809  LOG.old.1772297601396134  LOG.old.1772301312884469  LOG.old.1772303419783923  LOG.old.1772305697133020  LOG.old.1772306362107116  MANIFEST-000099
tests/: blockchain_stability.rs  consensus_fork_test.rs  consensus_hardening.rs  fork_diagnostic_test.rs  security_audit_tests.rs
tests/dashboard_v2/custom_dashboard/: index.html  manifest.json
tests/stone_dungeon/: README.md  index.html
