# Cargo.toml – Stone Master Node
[package]
name = "stone"
version = "1.0.1"
edition = "2021"

# ─── Binaries ────────────────────────────────────────────────────────────────

[[bin]]
name = "stone-master"
path = "src/bin/master_server.rs"

[[bin]]
name = "stone-auth"
path = "src/bin/auth_server.rs"

[[bin]]
name = "db-dump"
path = "src/bin/db_dump.rs"

[[bin]]
name = "stone-setup"
path = "src/bin/setup.rs"

[[bin]]
name = "stone-keygen"
path = "src/bin/stone_keygen.rs"

[[bin]]
name = "stone-publish-update"
path = "src/bin/stone_publish_update.rs"

[[bin]]
name = "stone-miner"
path = "src/bin/stone_miner.rs"

# ─── Abhängigkeiten ───────────────────────────────────────────────────────────
[dependencies]
# Serialisierung
serde       = { version = "1.0",   features = ["derive"] }
serde_json  = "1.0"
bincode     = { version = "2.0.1", features = ["serde"] }

# Persistenz
rocksdb     = { version = "0.22", default-features = false, features = ["snappy"] }

# Zeit & Hashing
sha2    = "0.10"
chrono  = { version = "0.4", features = ["serde"] }
hmac    = "0.12"
sha1    = "0.10"
data-encoding = "2.6"
urlencoding = "2.1"
hex     = "0.4"
rand    = "0.8"
base64  = "0.22"

# Async-Runtime
tokio   = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
bytes   = "1.0"
dashmap = "6"

# HTTP-Server (axum – Master Node API + Auth Server)
axum        = { version = "0.8", features = ["macros", "json", "multipart", "ws"] }
axum-server = { version = "0.8", features = ["tls-rustls"] }
tower       = { version = "0.5", features = ["util"] }
tower-http  = { version = "0.6", features = ["cors", "compression-gzip"] }

# HTTP-Client (Peer-Sync)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Auth / Krypto
bip39           = { version = "1.2", default-features = false, features = ["std", "rand"] }
rcgen           = "0.12"
# Ed25519 Schlüsselpaar, Signierung und Verifikation
ed25519-dalek   = { version = "2.1", features = ["rand_core"] }
# X25519 Diffie-Hellman für ECDH-Schlüsselableitung (Verschlüsselung)
x25519-dalek    = { version = "2.0", features = ["static_secrets"] }
# AES-256-GCM für Dokument-Verschlüsselung
aes-gcm         = "0.10"
# Argon2id KDF für Key-Encryption (Validator-Schlüssel)
argon2          = "0.5"

# JWT für Google Service Account OAuth2 (Push Notifications)
jsonwebtoken    = "9"

# ─── P2P-Netzwerk (libp2p) ───────────────────────────────────────────────────
libp2p = { version = "0.55", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "kad",
    "identify",
    "gossipsub",
    "request-response",
    "cbor",
    "tokio",
    "macros",
    "ed25519",
    "relay",
    "dcutr",
    "autonat",
    "upnp",
    "dns",
] }

# Hilfsmittel
anyhow          = "1.0"
futures-util    = { version = "0.3", default-features = false, features = ["std"] }
hostname        = "0.3"
url             = "2.5"
dotenvy         = "0.15"

# Snapshot-Komprimierung (tar + zstd)
tar             = "0.4"
zstd            = "0.13"

# Erasure Coding (Reed-Solomon) für Chunk-Sharding
reed-solomon-erasure = "6.0"

# Token-Economy (StoneCoin) – Dezimalgenau bis 8 Nachkommastellen
rust_decimal = { version = "1.36", features = ["serde-str"] }

# Bech32m Adressformat (stone1...)
bech32 = "0.11"

# UUID für User-IDs und Organisations-IDs
uuid = { version = "1.0", features = ["v4", "serde"] }

# ─── Setup-Wizard ────────────────────────────────────────────────────────────
dialoguer   = { version = "0.11", features = ["fuzzy-select"] }
indicatif   = "0.17"
console     = "0.15"

# ─── TUI (Standalone Miner) ──────────────────────────────────────────────────
ratatui     = "0.29"
crossterm   = "0.28"

# ─── WebSocket (axum 0.8 braucht eigene ws-dependency) ────────────────────────
tokio-tungstenite = "0.26"

# ─── System-Metriken (Miner Dashboard) ───────────────────────────────────────
sysinfo     = "0.33"
