[package]
name = "tauri-app"
version = "0.1.0"
description = "Stone Dashboard — Modular Blockchain Client"
authors = ["StoneChain"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# ─── Feature Flags (Modulare Bauweise) ────────────────────────────────────
[features]
default = ["messenger", "wallet", "explorer", "node-manager"]
messenger = []        # Chat + Server + Kontakte
wallet = []           # Balance + Transaktionen
explorer = []         # Onchain-Daten
node-manager = []     # Node-Verbindung
gaming = ["messenger", "wallet", "gaming-module"]   # + Spiele & Marktplatz
gaming-module = []    # Nur das Gaming-Modul (ohne Core)
full-node = ["messenger", "wallet", "node-module"]  # + P2P-Node
node-module = []      # Nur das Node-Modul (ohne Core)
all = ["messenger", "wallet", "explorer", "node-manager", "gaming-module", "node-module"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-http = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
sysinfo = "0.32"
tauri-plugin-notification = "2"
auto-launch = "0.5"
libloading = "0.8"
chrono = "0.4"

